# AI-Video-Summarizer

./: README.md  pyproject.toml
src/: main.py
