[tool.poetry]
name = "agentic-video-summarizer"
version = "0.1.0"
description = ""
authors = ["Muhammad Zain-ul-Abdin Ansari <muhammadzainulabdinansari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
phidata = "^2.7.6"
google-generativeai = "^0.8.3"
duckduckgo-search = "^7.2.0"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
